--- a/data.qmd
+++ b/data.qmd
@@ -1,9 +1,3 @@
----
-title: "edav_finalPro_check"
-output: html_document
-date: "2023-11-29"
----
-
 # Data
 
 ## Description
@@ -26,6 +20,7 @@ We can not directly download the table listed above (BLS doesn't provide CSV fil
 
 ```{r setup}
 knitr::opts_chunk$set(warning = FALSE)
+knitr::opts_chunk$set(message = FALSE)
 ```
 
 ```{r}
